flask-server/output.txt
 * Serving Flask app './ontobot/__init__.py'
 * Debug mode: on
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://192.168.8.130:5000
Press CTRL+C to quit
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
127.0.0.1 - - [02/May/2023 07:33:09] "POST /flask/checkpoint_1/taxowl_generate HTTP/1.1" 200 -
127.0.0.1 - - [02/May/2023 07:42:55] "POST /flask/checkpoint_2/op_generate/download HTTP/1.1" 200 -
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\services\\op_service.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\services\\op_service.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\services\\op_service.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\services\\op_service.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
127.0.0.1 - - [02/May/2023 09:13:35] "POST /flask/checkpoint_1/taxowl_generate HTTP/1.1" 200 -
127.0.0.1 - - [02/May/2023 09:13:59] "POST /flask/checkpoint_2/op_generate/download HTTP/1.1" 200 -
127.0.0.1 - - [02/May/2023 09:18:31] "POST /flask/checkpoint_2/op_generate/download HTTP/1.1" 200 -
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "C:\Users\Asus\.virtualenvs\flask-server-AxbIE3V_\lib\site-packages\flask\cli.py", line 897, in run_command
    app = info.load_app()
  File "C:\Users\Asus\.virtualenvs\flask-server-AxbIE3V_\lib\site-packages\flask\cli.py", line 308, in load_app
    app = locate_app(import_name, name)
  File "C:\Users\Asus\.virtualenvs\flask-server-AxbIE3V_\lib\site-packages\flask\cli.py", line 218, in locate_app
    __import__(module_name)
  File "C:\GitHub\Ontobot\ontobot-app\flask-server\ontobot\__init__.py", line 234
    def 
        ^
SyntaxError: invalid syntax
 * Debugger is active!
 * Debugger PIN: 145-013-942
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "C:\Users\Asus\.virtualenvs\flask-server-AxbIE3V_\lib\site-packages\flask\cli.py", line 897, in run_command
    app = info.load_app()
  File "C:\Users\Asus\.virtualenvs\flask-server-AxbIE3V_\lib\site-packages\flask\cli.py", line 308, in load_app
    app = locate_app(import_name, name)
  File "C:\Users\Asus\.virtualenvs\flask-server-AxbIE3V_\lib\site-packages\flask\cli.py", line 218, in locate_app
    __import__(module_name)
  File "C:\GitHub\Ontobot\ontobot-app\flask-server\ontobot\__init__.py", line 234
    def update_nAry
                   ^
SyntaxError: invalid syntax
 * Debugger is active!
 * Debugger PIN: 145-013-942
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "C:\Users\Asus\.virtualenvs\flask-server-AxbIE3V_\lib\site-packages\flask\cli.py", line 897, in run_command
    app = info.load_app()
  File "C:\Users\Asus\.virtualenvs\flask-server-AxbIE3V_\lib\site-packages\flask\cli.py", line 308, in load_app
    app = locate_app(import_name, name)
  File "C:\Users\Asus\.virtualenvs\flask-server-AxbIE3V_\lib\site-packages\flask\cli.py", line 218, in locate_app
    __import__(module_name)
  File "C:\GitHub\Ontobot\ontobot-app\flask-server\ontobot\__init__.py", line 234
    def update_nAry_flask()
                           ^
SyntaxError: expected ':'
 * Debugger is active!
 * Debugger PIN: 145-013-942
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "C:\Users\Asus\.virtualenvs\flask-server-AxbIE3V_\lib\site-packages\flask\cli.py", line 897, in run_command
    app = info.load_app()
  File "C:\Users\Asus\.virtualenvs\flask-server-AxbIE3V_\lib\site-packages\flask\cli.py", line 308, in load_app
    app = locate_app(import_name, name)
  File "C:\Users\Asus\.virtualenvs\flask-server-AxbIE3V_\lib\site-packages\flask\cli.py", line 218, in locate_app
    __import__(module_name)
  File "C:\GitHub\Ontobot\ontobot-app\flask-server\ontobot\__init__.py", line 238
    @app.route('/op/checkpoint/op_generate/populate/test', methods=['POST'])
    ^
IndentationError: expected an indented block after function definition on line 234
 * Debugger is active!
 * Debugger PIN: 145-013-942
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
 * Detected change in 'C:\\GitHub\\Ontobot\\ontobot-app\\flask-server\\ontobot\\__init__.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 111-348-715
